# UltraFlwr

./: .gitignore  .pre-commit-config.yaml  README.md  check_config.py  pyproject.toml  setup.py  tox.ini
.config/Ultralytics/: persistent_cache.json  settings.json
FedAvg_baseline_0/train/: args.yaml  results.csv
FedAvg_baseline_0/train2/: args.yaml  results.csv
FedAvg_baseline_1/train/: args.yaml  results.csv
FedAvg_baseline_1/train2/: args.yaml  results.csv
FedAvg_pest24_0/train/: args.yaml  results.csv
FedAvg_pest24_0/train10/: args.yaml  results.csv
FedAvg_pest24_0/train11/: args.yaml  results.csv
FedAvg_pest24_0/train12/: args.yaml  results.csv
FedAvg_pest24_0/train2/: args.yaml  results.csv
FedAvg_pest24_0/train3/: args.yaml  results.csv
FedAvg_pest24_0/train4/: args.yaml  results.csv
FedAvg_pest24_0/train5/: args.yaml  results.csv
FedAvg_pest24_0/train6/: args.yaml  results.csv
FedAvg_pest24_0/train7/: args.yaml  results.csv
FedAvg_pest24_0/train8/: args.yaml  results.csv
FedAvg_pest24_0/train9/: args.yaml  results.csv
FedAvg_pest24_1/train/: args.yaml  results.csv
FedAvg_pest24_1/train10/: args.yaml  results.csv
FedAvg_pest24_1/train11/: args.yaml  results.csv
FedAvg_pest24_1/train12/: args.yaml  results.csv
FedAvg_pest24_1/train2/: args.yaml  results.csv
FedAvg_pest24_1/train3/: args.yaml  results.csv
FedAvg_pest24_1/train4/: args.yaml
FedAvg_pest24_1/train5/: args.yaml  results.csv
FedAvg_pest24_1/train6/: args.yaml  results.csv
FedAvg_pest24_1/train7/: args.yaml  results.csv
FedAvg_pest24_1/train8/: args.yaml  results.csv
FedAvg_pest24_1/train9/: args.yaml  results.csv
FedYOLO/: config.py
FedYOLO/test/: test.py
FedYOLO/train/: strategies.py  yolo_client.py  yolo_server.py
FedYOLO/yolo_configs/: yolo11n_pest24.yaml
benchmarks/: endoscapes.md
datasets/baseline/: data.yaml
datasets/mnist/partitions/client_0/: data.yaml
datasets/pose/: data.yaml
datasets/pose/partitions/client_0/: data.yaml
datasets/pose/partitions/client_2/: data.yaml
datasets/seg/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/seg/partitions/client_0/: data.yaml
datasets/seg/train/labels/: flare_0000_jpg.rf.12447554af6fbbe2573a5a05593b71fe.txt  flare_0000_jpg.rf.133f5bab232b50a3d8c3f5a5ffa3b37c.txt  flare_0000_jpg.rf.35688301a871f5f6c52f4bb917e5d811.txt  flare_0000_jpg.rf.44597662abf2da724e61028d0fbbb241.txt  flare_0000_jpg.rf.49e51ab24cbf03fb9d7e5bbfd3ea77e7.txt  flare_0000_jpg.rf.500d8c6a6092ac491db2846deff4d8c9.txt  flare_0000_jpg.rf.588b6e4ddce50bc424566d1831a53bc5.txt  flare_0000_jpg.rf.6f632761faf1b9a89098c77ba8284ab2.txt  flare_0000_jpg.rf.6fea972705bacb481654d577a277db5a.txt  (+2366 more)
docs/: dataset_format.md  local_docker.md  local_venv.md  motivation.md  result_structure.md  ssl.md  workflow.md
fedyolo/: config.py
fedyolo/cli/: base_orchestrator.py  partition.py  test.py  train.py  train_ssl.py
fedyolo/data/: partitioner.py
fedyolo/data/converters/: endoscapes_coco_to_yolo.py  m2cai16_voc_to_yolo.py
fedyolo/infra/cluster/: runai.sh
fedyolo/infra/docker/: Dockerfile  build.sh
fedyolo/test/: evaluator.py  utils.py
fedyolo/train/: client.py  dynamic_client.py  output_manager.py  server.py  server_utils.py  ssl_client.py  ssl_trainer.py  strategies.py
fedyolo/yolo_configs/: yolo11n_baseline.yaml  yolo11n_pose.yaml
scripts/central_train_and_test/: run_local_train_and_test.sh
scripts/federated_train_and_test/: benchmark.sh  test.sh  train.sh
tests/: __init__.py  conftest.py  test_data_loaders.py  test_ssl.py  test_ssl_task_heads.py  test_strategies.py  test_weight_sharing.py
tests/fixtures/: mock_data.yaml  mock_pose_data.yaml
tools/: README.md
tools/centralized/: local_test_only.py  local_train_and_test.py  organize_log_results_local_train.py  run_local_eval.sh  run_local_train_and_test.sh  summarize_eval_results.py
ultravenv/: pyvenv.cfg
ultravenv/Scripts/: activate  activate.bat
(+4991 files in other folders)
